--- a/3-12/ajax/get/index1.html
+++ b/3-12/ajax/get/index1.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-<div id="content"></div>
+<ul id="content"></ul>
 </body>
 <script>
     var xhr=new XMLHttpRequest();
